--- a/style.css
+++ b/style.css
@@ -4,15 +4,31 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height:600px;  
 }
+
 .row {
     display: flex;
-
 }
 
 .cell {
     border: 1px solid black;
     background-color: beige;
-    width: 20px;
-    height: 20px;
+    flex: 1;
+    aspect-ratio: 1/1; 
+}
+
+#header {
+    text-align: center;
+}
+
+#size {
+    display: block;
+    margin: auto;
+    font-size: 18px;
 }
